fix welcome screen alignment

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -345,13 +345,13 @@ tr:nth-child(even) {
 /**** welcome *****************************************************************/
 /******************************************************************************/
 .center-vh {
-  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
 }
 .welcome a#login-btn {
   font-weight: bolder !important;
